@@ -4,6 +4,8 @@ AC_INIT(configure.in)
 AM_INIT_AUTOMAKE(apotheke, 0.2)
 AM_CONFIG_HEADER(config.h)
 
+AM_MAINTAINER_MODE
+
 AC_PROG_INTLTOOL
 
 AC_ISC_POSIX
@@ -11,7 +13,7 @@ AC_PROG_CC
 AM_PROG_CC_STDC
 AC_HEADER_STDC
 
-GNOME_COMPLIE_WARNINGS
+GNOME_COMPILE_WARNINGS(yes)
 
 dnl ******************************
 dnl pkg-config checks
@@ -22,21 +24,10 @@ AC_SUBST(APOTHEKE_LIBS)
 
 
 dnl ******************************
-dnl gconf paths
+dnl gconf stuff
 dnl ******************************
 AC_PATH_PROG(GCONFTOOL, gconftool-2)
-dnl Specify the gconf configuration source,
-dnl default to xml::$(sysconfdir)/gconf/gconf.xml.defaults
-
-GCONF_CONFIG_SOURCE=
-
-AC_ARG_ENABLE(gconf-source, [  --enable-gconf-source=sourceaddress Where to install schema files.], GCONF_CONFIG_SOURCE=$enable_gconf_source,)
-if test "x$GCONF_CONFIG_SOURCE" = "x"; then
-        GCONF_CONFIG_SOURCE="xml::\${sysconfdir}/gconf/gconf.xml.defaults"
-fi
-
-AC_SUBST(GCONF_CONFIG_SOURCE)
-AC_SUBST(INSTALL_GCONF_CONFIG_SOURCE)
+AM_GCONF_SOURCE_2
 
 
 dnl ******************************
